[tool.poetry]
name = "pantry"
version = "0.1.0"
description = ""
authors = ["Kallan Gerard <36556982+kallangerard@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "pantry", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
autopep8 = "^2.0.2"
yapf = "^0.33.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
based_on_style = yapf
indent_width = 2